saturday project commit

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -24,34 +24,17 @@
     <nav>
       <ul>
         <li><a class="active" href="#home">Home</a></li>
+        <li><a class="active" href="#quiz">Quiz</a></li>
         <li><a href="#profile">Profile</a></li>
 
 
       </ul>
     </nav>
     
-       <!-- A Search form is another commmon non-linear way to navigate through a website. 
-
-       <form>
-         <input type="search" name="q" placeholder="Search query">
-         <input type="submit" value="Go!">
-       </form>
-     
-     -->
-      
-    <!-- Here is our page's main content -->
-    <main>
-
-      <!-- It contains an article -->
-      <article>
-        <h2>Welcome to Brain Train,
-            a quiz application that helps train your brain in specfic areas.</h2>
-
-        <p>Welcome to my personal website. 
-          This website contains all my portfolio projects for both web development and visual art. 
-          I do hope you enjoy the experience of this website.</p>
-          
-        </main>
+       <div id="quiz"></div>
+       <button id="submit">Submit Quiz</button>
+       
+       <div id="results"></div>
     <footer>
       <p>©Copyright 2020 by Patrick Anglin. All rights reserved.</p>
     </footer>
